@@ -249,3 +249,50 @@ ActiveRecord:associations:lazy            4.190000   0.450000   4.640000 (  8.05
 ActiveRecord:associations:included        4.530000   0.030000   4.560000 (  5.260562)
 DataMapper:associations                   5.820000   0.070000   5.890000 (  6.480988)
 
+Current performance:
+                                              user     system      total        real
+ActiveRecord:id                           0.110000   0.020000   0.130000 (  0.218224)
+DataMapper:id                             0.180000   0.020000   0.200000 (  0.299119)
+DataMapper:id:in-session                  0.060000   0.000000   0.060000 (  0.058262)
+ActiveRecord:all                          0.230000   0.020000   0.250000 (  0.380154)
+DataMapper:all                            0.660000   0.020000   0.680000 (  0.811355)
+DataMapper:all:in-session                 0.540000   0.030000   0.570000 (  0.700819)
+ActiveRecord:conditions                   0.100000   0.020000   0.120000 (  0.262222)
+DataMapper:conditions:short               0.200000   0.020000   0.220000 (  0.356098)
+DataMapper:conditions:short:in-session    0.170000   0.020000   0.190000 (  0.332662)
+DataMapper:conditions:long                0.200000   0.020000   0.220000 (  0.355016)
+DataMapper:conditions:long:in-session     0.170000   0.020000   0.190000 (  0.330220)
+ActiveRecord:insert                       5.260000   0.340000   5.600000 (  6.514014)
+DataMapper:insert                         0.960000   0.100000   1.060000 (  1.528213)
+ActiveRecord:update                       0.530000   0.080000   0.610000 (  0.930696)
+DataMapper:update                         0.390000   0.040000   0.430000 (  0.668540)
+ActiveRecord:associations:lazy            4.170000   0.450000   4.620000 (  7.936800)
+ActiveRecord:associations:included        4.580000   0.030000   4.610000 (  5.271687)
+DataMapper:associations                   3.360000   0.050000   3.410000 (  3.766838)
+DataMapper:associations:in-session        0.750000   0.020000   0.770000 (  0.906840)
+ActiveRecord:find_by_sql                  0.220000   0.010000   0.230000 (  0.373307)
+DataMapper:find_by_sql                    0.140000   0.030000   0.170000 (  0.302143)
+
+Remove block-conditions support:
+                                              user     system      total        real
+ActiveRecord:id                           0.100000   0.020000   0.120000 (  0.221170)
+DataMapper:id                             0.190000   0.020000   0.210000 (  0.302617)
+DataMapper:id:in-session                  0.050000   0.000000   0.050000 (  0.057694)
+ActiveRecord:all                          0.220000   0.020000   0.240000 (  0.377332)
+DataMapper:all                            0.650000   0.020000   0.670000 (  0.811892)
+DataMapper:all:in-session                 0.560000   0.020000   0.580000 (  0.716009)
+ActiveRecord:conditions                   0.110000   0.020000   0.130000 (  0.263317)
+DataMapper:conditions:short               0.190000   0.020000   0.210000 (  0.350601)
+DataMapper:conditions:short:in-session    0.170000   0.020000   0.190000 (  0.331199)
+DataMapper:conditions:long                0.190000   0.020000   0.210000 (  0.352986)
+DataMapper:conditions:long:in-session     0.170000   0.020000   0.190000 (  0.331603)
+ActiveRecord:insert                       5.240000   0.340000   5.580000 (  6.472757)
+DataMapper:insert                         0.970000   0.100000   1.070000 (  1.577412)
+ActiveRecord:update                       0.550000   0.080000   0.630000 (  0.942404)
+DataMapper:update                         0.400000   0.040000   0.440000 (  0.667777)
+ActiveRecord:associations:lazy            4.170000   0.450000   4.620000 (  7.976589)
+ActiveRecord:associations:included        4.650000   0.040000   4.690000 (  5.385883)
+DataMapper:associations                   3.380000   0.040000   3.420000 (  3.807896)
+DataMapper:associations:in-session        0.750000   0.020000   0.770000 (  0.903133)
+ActiveRecord:find_by_sql                  0.220000   0.020000   0.240000 (  0.374365)
+DataMapper:find_by_sql                    0.140000   0.020000   0.160000 (  0.300868)
