@@ -9,7 +9,6 @@ require 'data_mapper/support/blank'
 require 'data_mapper/support/enumerable'
 require 'data_mapper/support/symbol'
 require 'data_mapper/support/string'
-require 'data_mapper/support/proc'
 require 'data_mapper/support/inflector'
 require 'data_mapper/support/struct'
 require 'data_mapper/database'
