@@ -1,3 +1,0 @@
-class BlankSlate #:nodoc:
-  instance_methods.each { |m| undef_method m unless m =~ /^(__|instance_eval)/ }
-end
